# hiveads

./: .gitignore  .gitmodules  Makefile.am  autogen.sh  build.sh  build_candidate.sh  configure.ac  main.c  version.sh
debian/DEBIAN/: control  postinst  rules
debian/etc/systemd/system/: data_logger.service  devicehived.service  dump1090.service  hiveads.service
services/: dump1090.service  hiveads.service
src/: Makefile.am  hiveads.c
